	 so large it caused pointer wraparound (fixes bug #1753938).
20070715 z80.c: free memory used by page with unknown number (fixes bug
	 #1754362).
20070717 tzx_read.c,test/{invalid-gdb.tzx,test.c}: check that GDB data does
	 not extend beyond end of block (fixes bug #1755124).
20070717 tape_block.c,test/{empty-drb.tzx,test.c}: don't segfault on empty
	 DRBs (fixes bug #1755372).
20070717 tzx_read.c,test/{invalid-archiveinfo.tzx,test.c}: free the right thing
	 when unwinding an invalid archive info block (fixes bug #1755539).
20070717 tzx_read.c,test/{invalid-hardwareinfo.tzx,test.c}: free up tape block
	 on invalid hardware info blocks (fixes bug #1755545).
20070719 warajevo_read.c,test/{invalid-warajevo-blockoffset.tap,test.c}: check
         block offset in Warajevo tapes before reading block header (thanks,
         Philip Kendall) (fixes bug #1756375) (Fred).
20070720 warajevo_read.c: try to catch pointer wrap as well (thanks, Philip
         Kendall) (Fred).
20070720 tzx_read.c,test/{invalid-customdata.tzx,test.c}: fix memory leak on
	 invalid custom data blocks (fixes bug #1757587).
20070720 test/test.c: factor out common code.
20070723 test/{loopend.tzx,test.c}: add test for bug #1758860 (stray TZX loop
	 end block causes segfault).
20070724 tape.c,test/{loop.tzx,test.c}: fix another aspect of bug #1758860 (TZX
	 loop blocks broken).
20070724 tape.c: fix stray TZX loop end block causes segfault (fixes bug
	 #1758860).
20070724 test/test.c: allow individual tests to be selected.
20070904 Makefile.am,generate.pl.in: allowing building in directories other
	 than the main source directory.
20070904 plusd.c: fix support for +D snapshots (fixes bug #1765021) (Stuart).
20070904 Makefile.am: rebuild make-perl when config.h is updated (Stuart).
20070905 Makefile.am: clean generated files on 'make clean' etc. (Stuart).
20070905 configure.in: add --disable-libaudiofile option (Stuart).
20070925 test/invalid-warajevo-blockoffset.tap: reduce to minimal testcase.